src/test/ui/chalkify/lower_struct.stderr
error: program clause dump
  --> $DIR/lower_struct.rs:13:1
   |
LL | #[rustc_dump_program_clauses] //~ ERROR program clause dump
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: FromEnv(T: std::marker::Sized) :- FromEnv(Foo<T>).
   = note: FromEnv(std::boxed::Box<T>: std::clone::Clone) :- FromEnv(Foo<T>).
   = note: WellFormed(Foo<T>) :- Implemented(T: std::marker::Sized), Implemented(std::boxed::Box<T>: std::clone::Clone).

error: aborting due to previous error

